# sawOptoforceSensor

./: CHANGELOG.md  CMakeLists.txt  README.md
applications/: CMakeLists.txt  calibration.cpp
code/: ATIDAQHardwareInterface.cpp  ATIDAQHardwareInterface.h  CMakeLists.txt  devFTSensorATI.cpp  devFTSensorATI.h  devFTSensorATITask.cpp  devFTSensorATITask.h  ftconfig.c  ftconfig.h  ftrt.c  ftrt.h
code/calibration/: FT13793.cal
components/: CMakeLists.txt  package.xml
components/code/: mtsOptoforce3D.cpp
components/code/Qt/: CMakeLists.txt  mtsForceTorqueQtWidget.cpp
components/include/sawOptoforceSensor/: mtsForceTorqueQtWidget.h  mtsOptoforce3D.h  sawOptoforceSensorQtExport.h
core/: CMakeLists.txt  colcon.pkg
core/applications/: calibration.cpp
core/components/: CMakeLists.txt
core/components/code/: mtsOptoforce3D.cpp
core/components/code/Qt/: mtsOptoforce3DQtWidget.cpp
core/components/include/sawOptoforceSensor/: mtsOptoforce3D.h  mtsOptoforce3DQtWidget.h
core/examples/: CMakeLists.txt
core/examples/Qt/: optoforce_json.cpp
core/examples/console/: CMakeLists.txt  main.cpp
core/share/: OMD-10-SE-10N.json
examples/: CMakeLists.txt  main.cpp  package.xml
examples/Qt/: CMakeLists.txt  optoforce_json.cpp
examples/console/: CMakeLists.txt
ros/: CMakeLists.txt  colcon.pkg  package.xml
ros/src/: optoforce.cpp  optoforce_json.cpp
sawOptoforce/: CMakeLists.txt  README.md
sawOptoforce/calibration/: CMakeLists.txt  sensorcalibration.cpp
sawOptoforce/components/cmake/: sawOptoforceSensorConfig.cmake.in
sawOptoforce/components/code/: mtsOptoforce3D.cpp  mtsOptoforce3D.h
sawOptoforce/components/include/sawOptoforceSensor/: mtsOptoforce3D.h
sawOptoforce/examples/: CMakeLists.txt  OMD-45-FE-1000N.json  main.cpp  matrix_10.json  matrix_20.json  matrix_30.json  matrix_40.json
sawOptoforce/share/calibration_matrix_OMD-45-FE-1000N_sensor/: matrix_10.json  matrix_20.json  matrix_30.json  matrix_40.json  matrix_50.json  matrix_60.json
share/: OMD-45-FE-1000N.json
test/: CMakeLists.txt  main.cpp  mtsOptoforce3D.cpp  mtsOptoforce3D.h
